--- a/results/results.ipynb
+++ b/results/results.ipynb
@@ -12,83 +12,119 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import folium\n",
     "\n",
-    "def plot_normalized_lat_lon(\n",
-    "    real_csv_path, \n",
-    "    generated_csv_path, \n",
-    "    output_file=None\n",
-    "):\n",
+    "def plot_lat_lon_points(real_csv_path, generated_csv_path, output_file=None):\n",
     "    \"\"\"\n",
-    "    Reads two CSV files in format: label, tid, lat, lon, day, hour, category\n",
-    "    Normalizes lat/lon by subtracting the median across both datasets,\n",
-    "    then plots the results with small scatter markers.\n",
-    "    \"\"\"\n",
+    "    Reads two CSV files in the format:\n",
+    "        label, tid, lat, lon, day, hour, category\n",
+    "    and generates a scatter plot of latitude vs longitude\n",
+    "    to compare real data points and generated data points.\n",
     "\n",
-    "    # Read the data\n",
+    "    Displays min/max lat/lon in the console and in the chart.\n",
+    "    \"\"\"\n",
+    "    # Read the real data\n",
     "    df_real = pd.read_csv(real_csv_path)\n",
+    "    # Read the generated data\n",
     "    df_generated = pd.read_csv(generated_csv_path)\n",
     "\n",
-    "    # Combine temporarily to compute global medians\n",
-    "    combined_df = pd.concat([df_real, df_generated], ignore_index=True)\n",
+    "    # Combine them temporarily to compute overall min/max\n",
+    "    df_combined = pd.concat([df_real, df_generated], ignore_index=True)\n",
     "\n",
-    "    lat_median = combined_df['lat'].median()\n",
-    "    lon_median = combined_df['lon'].median()\n",
+    "    lat_min = df_combined['lat'].min()\n",
+    "    lat_max = df_combined['lat'].max()\n",
+    "    lon_min = df_combined['lon'].min()\n",
+    "    lon_max = df_combined['lon'].max()\n",
     "\n",
-    "    # Subtract median from each dataset so that median becomes 0,0\n",
-    "    df_real['lat_norm'] = df_real['lat'] - lat_median\n",
-    "    df_real['lon_norm'] = df_real['lon'] - lon_median\n",
-    "\n",
-    "    df_generated['lat_norm'] = df_generated['lat'] - lat_median\n",
-    "    df_generated['lon_norm'] = df_generated['lon'] - lon_median\n",
+    "    # Print the results in the console\n",
+    "    print(f\"Latitude range: {lat_min} to {lat_max}\")\n",
+    "    print(f\"Longitude range: {lon_min} to {lon_max}\")\n",
     "\n",
     "    # Create the figure and axis\n",
-    "    fig, ax = plt.subplots(figsize=(10, 7))\n",
+    "    fig, ax = plt.subplots(figsize=(8, 6))\n",
     "\n",
-    "    # Plot real data points (small blue dots)\n",
+    "    # Plot real data points\n",
     "    ax.scatter(\n",
-    "        df_real['lon_norm'], \n",
-    "        df_real['lat_norm'], \n",
-    "        s=5, \n",
-    "        c='#5495c3', \n",
-    "        alpha=0.6, \n",
-    "        label='Real Points'\n",
+    "        df_real['lon'], df_real['lat'], \n",
+    "        s=40, c='blue', alpha=0.6, label='Real'\n",
     "    )\n",
     "\n",
-    "    # Plot generated data points (small orange dots)\n",
+    "    # Plot generated data points\n",
     "    ax.scatter(\n",
-    "        df_generated['lon_norm'], \n",
-    "        df_generated['lat_norm'], \n",
-    "        s=5, \n",
-    "        c='#fd7f0c', \n",
-    "        alpha=0.3, \n",
-    "        label='Generated Points'\n",
+    "        df_generated['lon'], df_generated['lat'], \n",
+    "        s=40, c='red', alpha=0.6, label='Generated'\n",
     "    )\n",
     "\n",
-    "    # Set title and labels\n",
-    "    ax.set_title('Foursquare NYC')\n",
+    "    # Label axes and title\n",
     "    ax.set_xlabel('Longitude')\n",
     "    ax.set_ylabel('Latitude')\n",
-    "    \n",
-    "    # Show grid for a style similar to your screenshot\n",
-    "    ax.grid(True, alpha=0.3)\n",
+    "    ax.set_title('Real vs Generated Data Points')\n",
     "\n",
-    "    # Add legend\n",
+    "    # Display min/max lat/lon on the plot\n",
+    "    ax.text(\n",
+    "        0.05, 0.95,\n",
+    "        f\"Lat range: {lat_min:.4f} - {lat_max:.4f}\\n\"\n",
+    "        f\"Lon range: {lon_min:.4f} - {lon_max:.4f}\",\n",
+    "        transform=ax.transAxes,\n",
+    "        va='top',\n",
+    "        ha='left',\n",
+    "        fontsize=9,\n",
+    "        color='black',\n",
+    "        bbox=dict(boxstyle='round,pad=0.4', fc='white', ec='black', alpha=0.7)\n",
+    "    )\n",
+    "\n",
+    "    # Legend\n",
     "    ax.legend()\n",
     "\n",
-    "    # Save to file if requested\n",
+    "    # Optionally save the figure\n",
     "    if output_file:\n",
     "        plt.savefig(output_file, dpi=300, bbox_inches='tight')\n",
     "\n",
     "    # Show the plot\n",
     "    plt.show()\n",
     "\n",
+    "    return lat_min, lat_max, lon_min, lon_max\n",
+    "\n",
+    "\n",
+    "def show_nyc_region_map(lat_min, lat_max, lon_min, lon_max, output_html='nyc_region_map.html'):\n",
+    "    \"\"\"\n",
+    "    Displays a Folium map spanning the bounding box (lat_min, lon_min) to (lat_max, lon_max).\n",
+    "    Draws a rectangle for that bounding area.\n",
+    "    \"\"\"\n",
+    "    # Determine the center (midpoint of bounding box)\n",
+    "    center_lat = (lat_min + lat_max) / 2\n",
+    "    center_lon = (lon_min + lon_max) / 2\n",
+    "    \n",
+    "    # Create a folium map\n",
+    "    m = folium.Map(location=[center_lat, center_lon], zoom_start=9)\n",
+    "\n",
+    "    # Define bounding coordinates: [SW corner, NE corner]\n",
+    "    bounds = [(lat_min, lon_min), (lat_max, lon_max)]\n",
+    "    \n",
+    "    # Fit the map to these bounds\n",
+    "    m.fit_bounds(bounds)\n",
+    "    \n",
+    "    # Draw a rectangle to visualize the bounding box\n",
+    "    folium.Rectangle(\n",
+    "        bounds=bounds,\n",
+    "        color='blue',\n",
+    "        fill=False\n",
+    "    ).add_to(m)\n",
+    "    \n",
+    "    # Save to HTML\n",
+    "    m.save(output_html)\n",
+    "    print(f\"Map saved to {output_html}. Open it in a browser to view.\")\n",
+    "\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
     "    # Example usage\n",
-    "    plot_normalized_lat_lon(\n",
-    "        real_csv_path=\"real.csv\",\n",
-    "        generated_csv_path=\"generated.csv\",\n",
-    "        output_file=\"foursquare_normalized_plot.png\"\n",
-    "    )\n"
+    "    lat_min, lat_max, lon_min, lon_max = plot_lat_lon_points(\n",
+    "        real_csv_path=\"syn_traj_test.csv\",\n",
+    "        generated_csv_path=\"syn_traj_test (6).csv\",\n",
+    "        output_file=\"comparison_plot.png\"\n",
+    "    )\n",
+    "\n",
+    "    show_nyc_region_map(lat_min, lat_max, lon_min, lon_max, output_html='nyc_region_map.html')\n"
    ]
   }
  ],
